# gate-arb

./: .dockerignore  .env.example  .pr-body.txt  Cargo.toml  Dockerfile  README.md  STATE.yaml  docker-compose.yml  nginx.conf
.github/workflows/: ci.yml
crates/db/: Cargo.toml
crates/db/src/: lib.rs
crates/db/tests/: db_test.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/engine/tests/: spread_test.rs
crates/frontend-ws/: Cargo.toml
crates/frontend-ws/src/: dashboard.html  lib.rs
crates/frontend-ws/tests/: state_test.rs
crates/gateway-ws/: Cargo.toml
crates/gateway-ws/src/: lib.rs
crates/gateway-ws/tests/: parse_price_test.rs
crates/health/: Cargo.toml
crates/health/src/: lib.rs
crates/order-manager/: Cargo.toml
crates/order-manager/src/: auth.rs  codec.rs  lib.rs  ring.rs
crates/order-manager/tests/: auth_test.rs  codec_test.rs  ring_test.rs
crates/risk/: Cargo.toml
crates/risk/src/: lib.rs
crates/risk/tests/: risk_test.rs
crates/strategy/: Cargo.toml
crates/strategy/src/: funding.rs  lib.rs
crates/strategy/tests/: order_wiring_test.rs  strategy_test.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
crates/types/tests/: order_cmd_test.rs
docs/superpowers/plans/: 2026-03-28-issue-13-reconnect-and-dataflow.md  2026-03-28-order-placement.md
scripts/: deploy.sh
src/: config.rs  main.rs
tests/: reconnect_test.rs
