[workspace]
resolver = "2"
members = ["crates/types", "crates/gateway-ws", "crates/engine", "crates/strategy", "crates/frontend-ws", "crates/order-manager", "crates/health"]

[package]
name = "gate-arb"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.44", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
engine = { path = "crates/engine" }
frontend-ws = { path = "crates/frontend-ws" }
strategy = { path = "crates/strategy" }
gateway-ws = { path = "crates/gateway-ws" }
health = { path = "crates/health" }

[[bin]]
name = "gate-arb"
path = "src/main.rs"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ivan <ivan@ddfeyes.com>"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.44", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "2.0"
parking_lot = "0.12"
hmac = "0.12"
sha2 = "0.10"
hex  = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
