[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["sync", "rt"] }
parking_lot = "0.12"
tracing = "0.1"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3"
