[package]
name = "frontend-ws"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
anyhow = { workspace = true }
