[package]
name = "order-manager"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
types            = { path = "../types" }
tokio            = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util     = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
tracing          = { workspace = true }
anyhow           = { workspace = true }
hmac             = { workspace = true }
sha2             = { workspace = true }
hex              = { workspace = true }
